# btleplug-js

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
examples/: scan.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src-js/: index.ts
test/: load.test.mjs  load.test.ts
