[package]
name = "btleplug-js"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nakasyou/btleplug-js"

[lib]
crate-type = ["cdylib"]

[dependencies]
btleplug = "0.12.0"
futures = "0.3.31"
napi = { version = "3.5.0", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3.3.0"
once_cell = "1.21.3"
tokio = { version = "1.48.0", features = ["sync", "time"] }
uuid = "1.19.0"

[build-dependencies]
napi-build = "2.2.3"
